--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@ background:rgba(23,206,86,1);
 
 
 </style>
+ 
+ <meta name="facebook-domain-verification" content="1pb0e1w3osgix9d7rbfcvmyzykv7y5" />
 
 <!-- Meta Pixel Code -->
 <script>
