--- a/bom-t/index.html
+++ b/bom-t/index.html
@@ -124,7 +124,7 @@ src="https://www.facebook.com/tr?id=2914834235476415&ev=PageView&noscript=1"
 <p>Está tudo certo!</p>
 </div>
  <div class="answer">
- <a href="https://qualidadededia.shop/">CLIQUE AQUI PARA ENTENDER MELHOR</a>
+ <a href="https://euquerobem.store/bom-t/p-01">CLIQUE AQUI PARA ENTENDER MELHOR</a>
 <!--<button class="btn" onclick="segunda()">CLIQUE AQUI PARA ENTENDER MELHOR</button>-->
 <!--<button class="btn" onclick="segunda()">NÃO</button>-->
 </div>
