--- a/p-01/index.html
+++ b/p-01/index.html
@@ -268,7 +268,7 @@ src="https://www.facebook.com/tr?id=2914834235476415&ev=ViewContent&noscript=1"
 <img src="https://thumbs2.imgbox.com/eb/cf/3OchRmvf_t.jpeg" alt="Adele"><br><br>
 <p style= "font-size:28px">Ela não foi minha paciente, mas o procedimento que ela fez é através desta mesma enzima que <strong>você daqui alguns segundos irá ter em suas mãos…</strong></p>
 
-<a href="https://euquerobem.store/bom-t/p-02" target="_self" data-params="true"><img src="./assets/img/btn1.png"></a>
+<a href="https://euquerobem.store/p-02" target="_self" data-params="true"><img src="./assets/img/btn1.png"></a>
 
 </div>
 </div>
